# generative-bi

./: .gitignore  README.md  pyproject.toml
src/agent/: graph.py  sql_generator.py
src/ingestion/: spark_ingest.py
src/schema/: registry.py
tests/: test_chart_and_schema.py  test_sql_validator.py
