name = "generative-bi"
version = "0.1.0"
description = "AI data platform: LangChain + LangGraph NL→SQL agent over ClickHouse with Apache Spark ingestion pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.urls]
Homepage   = "https://github.com/ritesxh/generative-bi"
Repository = "https://github.com/ritesxh/generative-bi"

[project.dependencies]
fastapi          = ">=0.115.0"
uvicorn          = ">=0.30.0"
langchain        = ">=0.3.0"
langgraph        = ">=0.2.0"
langchain-aws    = ">=0.2.0"
clickhouse-connect = ">=0.7.0"
pyspark          = ">=3.5.0"
pydantic         = ">=2.8.0"
psycopg2-binary  = ">=2.9.9"
python-dotenv    = ">=1.0.0"
python-jose      = {version = ">=3.3.0", extras = ["cryptography"]}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "black>=24.0",
]

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
select      = ["E", "F", "I", "W"]
